y.output

state 0
	$accept: .top $end 
	top: .    (1)

	PROGRAM_BRACKET_LEFT  shift 7
	STRING  shift 6
	.  reduce 1 (src line 37)

	interpolation  goto 5
	literal  goto 4
	literalModeTop  goto 2
	literalModeValue  goto 3
	top  goto 1

state 1
	$accept:  top.$end 

	$end  accept
	.  error


state 2
	top:  literalModeTop.    (2)
	literalModeTop:  literalModeTop.literalModeValue 

	PROGRAM_BRACKET_LEFT  shift 7
	STRING  shift 6
	.  reduce 2 (src line 45)

	interpolation  goto 5
	literal  goto 4
	literalModeValue  goto 8

state 3
	literalModeTop:  literalModeValue.    (3)

	.  reduce 3 (src line 67)


state 4
	literalModeValue:  literal.    (5)

	.  reduce 5 (src line 87)


state 5
	literalModeValue:  interpolation.    (6)

	.  reduce 6 (src line 92)


state 6
	literal:  STRING.    (21)

	.  reduce 21 (src line 198)


state 7
	interpolation:  PROGRAM_BRACKET_LEFT.expr PROGRAM_BRACKET_RIGHT 

	PROGRAM_BRACKET_LEFT  shift 7
	PAREN_LEFT  shift 10
	ARITH_OP  shift 15
	IDENTIFIER  shift 16
	INTEGER  shift 12
	FLOAT  shift 13
	BOOL  shift 14
	STRING  shift 6
	.  error

	expr  goto 9
	interpolation  goto 5
	literal  goto 4
	literalModeTop  goto 11
	literalModeValue  goto 3

state 8
	literalModeTop:  literalModeTop literalModeValue.    (4)

	.  reduce 4 (src line 72)


state 9
	interpolation:  PROGRAM_BRACKET_LEFT expr.PROGRAM_BRACKET_RIGHT 
	expr:  expr.ARITH_OP expr 

	PROGRAM_BRACKET_RIGHT  shift 17
	ARITH_OP  shift 18
	.  error


state 10
	expr:  PAREN_LEFT.expr PAREN_RIGHT 

	PROGRAM_BRACKET_LEFT  shift 7
	PAREN_LEFT  shift 10
	ARITH_OP  shift 15
	IDENTIFIER  shift 16
	INTEGER  shift 12
	FLOAT  shift 13
	BOOL  shift 14
	STRING  shift 6
	.  error

	expr  goto 19
	interpolation  goto 5
	literal  goto 4
	literalModeTop  goto 11
	literalModeValue  goto 3

state 11
	literalModeTop:  literalModeTop.literalModeValue 
	expr:  literalModeTop.    (9)

	PROGRAM_BRACKET_LEFT  shift 7
	STRING  shift 6
	.  reduce 9 (src line 108)

	interpolation  goto 5
	literal  goto 4
	literalModeValue  goto 8

state 12
	expr:  INTEGER.    (10)

	.  reduce 10 (src line 112)


state 13
	expr:  FLOAT.    (11)

	.  reduce 11 (src line 120)


state 14
	expr:  BOOL.    (12)

	.  reduce 12 (src line 128)


state 15
	expr:  ARITH_OP.expr 

	PROGRAM_BRACKET_LEFT  shift 7
	PAREN_LEFT  shift 10
	ARITH_OP  shift 15
	IDENTIFIER  shift 16
	INTEGER  shift 12
	FLOAT  shift 13
	BOOL  shift 14
	STRING  shift 6
	.  error

	expr  goto 20
	interpolation  goto 5
	literal  goto 4
	literalModeTop  goto 11
	literalModeValue  goto 3

state 16
	expr:  IDENTIFIER.    (15)
	expr:  IDENTIFIER.PAREN_LEFT args PAREN_RIGHT 
	expr:  IDENTIFIER.SQUARE_BRACKET_LEFT expr SQUARE_BRACKET_RIGHT 

	PAREN_LEFT  shift 21
	SQUARE_BRACKET_LEFT  shift 22
	.  reduce 15 (src line 165)


state 17
	interpolation:  PROGRAM_BRACKET_LEFT expr PROGRAM_BRACKET_RIGHT.    (7)

	.  reduce 7 (src line 97)


state 18
	expr:  expr ARITH_OP.expr 

	PROGRAM_BRACKET_LEFT  shift 7
	PAREN_LEFT  shift 10
	ARITH_OP  shift 15
	IDENTIFIER  shift 16
	INTEGER  shift 12
	FLOAT  shift 13
	BOOL  shift 14
	STRING  shift 6
	.  error

	expr  goto 23
	interpolation  goto 5
	literal  goto 4
	literalModeTop  goto 11
	literalModeValue  goto 3

state 19
	expr:  PAREN_LEFT expr.PAREN_RIGHT 
	expr:  expr.ARITH_OP expr 

	PAREN_RIGHT  shift 24
	ARITH_OP  shift 18
	.  error


state 20
	expr:  ARITH_OP expr.    (13)
	expr:  expr.ARITH_OP expr 

	.  reduce 13 (src line 136)


state 21
	expr:  IDENTIFIER PAREN_LEFT.args PAREN_RIGHT 
	args: .    (18)

	PROGRAM_BRACKET_LEFT  shift 7
	PAREN_LEFT  shift 10
	ARITH_OP  shift 15
	IDENTIFIER  shift 16
	INTEGER  shift 12
	FLOAT  shift 13
	BOOL  shift 14
	STRING  shift 6
	.  reduce 18 (src line 185)

	expr  goto 26
	interpolation  goto 5
	literal  goto 4
	literalModeTop  goto 11
	literalModeValue  goto 3
	args  goto 25

state 22
	expr:  IDENTIFIER SQUARE_BRACKET_LEFT.expr SQUARE_BRACKET_RIGHT 

	PROGRAM_BRACKET_LEFT  shift 7
	PAREN_LEFT  shift 10
	ARITH_OP  shift 15
	IDENTIFIER  shift 16
	INTEGER  shift 12
	FLOAT  shift 13
	BOOL  shift 14
	STRING  shift 6
	.  error

	expr  goto 27
	interpolation  goto 5
	literal  goto 4
	literalModeTop  goto 11
	literalModeValue  goto 3

state 23
	expr:  expr.ARITH_OP expr 
	expr:  expr ARITH_OP expr.    (14)

	.  reduce 14 (src line 157)


state 24
	expr:  PAREN_LEFT expr PAREN_RIGHT.    (8)

	.  reduce 8 (src line 103)


state 25
	expr:  IDENTIFIER PAREN_LEFT args.PAREN_RIGHT 
	args:  args.COMMA expr 

	PAREN_RIGHT  shift 28
	COMMA  shift 29
	.  error


state 26
	expr:  expr.ARITH_OP expr 
	args:  expr.    (20)

	ARITH_OP  shift 18
	.  reduce 20 (src line 193)


state 27
	expr:  expr.ARITH_OP expr 
	expr:  IDENTIFIER SQUARE_BRACKET_LEFT expr.SQUARE_BRACKET_RIGHT 

	SQUARE_BRACKET_RIGHT  shift 30
	ARITH_OP  shift 18
	.  error


state 28
	expr:  IDENTIFIER PAREN_LEFT args PAREN_RIGHT.    (16)

	.  reduce 16 (src line 169)


state 29
	args:  args COMMA.expr 

	PROGRAM_BRACKET_LEFT  shift 7
	PAREN_LEFT  shift 10
	ARITH_OP  shift 15
	IDENTIFIER  shift 16
	INTEGER  shift 12
	FLOAT  shift 13
	BOOL  shift 14
	STRING  shift 6
	.  error

	expr  goto 31
	interpolation  goto 5
	literal  goto 4
	literalModeTop  goto 11
	literalModeValue  goto 3

state 30
	expr:  IDENTIFIER SQUARE_BRACKET_LEFT expr SQUARE_BRACKET_RIGHT.    (17)

	.  reduce 17 (src line 173)


state 31
	expr:  expr.ARITH_OP expr 
	args:  args COMMA expr.    (19)

	ARITH_OP  shift 18
	.  reduce 19 (src line 189)


18 terminals, 8 nonterminals
22 grammar rules, 32/2000 states
0 shift/reduce, 0 reduce/reduce conflicts reported
57 working sets used
memory: parser 45/30000
27 extra closures
74 shift entries, 1 exceptions
16 goto entries
31 entries saved by goto default
Optimizer space used: output 39/30000
39 table entries, 2 zero
maximum spread: 18, maximum offset: 29
